cc/blink: Don't checker images with an on-load handler.

The onload handler is most likely to be used by pages to ensure that an
image can be synchronously displayed after it is appended. Since async
decoding of images would disable that, it can lead to flickering issues
when replacing images of different resolutions. Veto such images from
the async path to avoid these issues.

Bug: 740953
Change-Id: I9c9cf2cb08d91c14f8e0ec4eb03867aaf41118cc